--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,1 +1,40 @@
+{
+  "name": "kaizen-agent-framework",
+  "version": "1.0.0",
+  "description": "A React-based frontend for the Kaizen Agent Framework.",
+  "main": "src/index.js",
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.6.1",
+    "react-scripts": "5.0.1",
+    "axios": "^1.3.5",
+    "react-toastify": "^9.1.1",
+    "prop-types": "^15.8.1"
+  },
+  "devDependencies": {
+    "eslint": "^8.32.0",
+    "eslint-plugin-react": "^7.31.8"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "author": "Your Name",
+  "license": "Apache-2.0"
+}
 # Placeholder content for frontend/package.json
